test/implicitDup19_2.slq
def foo(x:ğ”¹,const cond:ğ”¹){
	y:=dup(x);
	k:=dup(y);
	z:=0;
	if cond{
		a:=k;
		b:=k; /// error
		y:=H(y);
		c:=k; /// error
	}else{
		x:=H(x);
		a:=k;
		b:=k; /// error
		y:=H(y);
		c:=k; /// error
	}
	return (x,y,a,b,c);
}
